# neofactory-

./: .gitignore  README.md  Start-NeoFactory.ps1  dist-test-randomizer.mjs  index.html  package-lock.json  package.json  tailwind.config.ts
launcher/: NeoFactory 智能制造训练营.cmd  工造星球.cmd  智能制造训练营.cmd
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CartoonFactoryHero.tsx  EncyclopediaCard.tsx  FactoryMap.tsx  Layout.tsx  LevelCard.tsx  ModuleCard.tsx  NavBar.tsx  PracticeMode.tsx  ProgressBar.tsx  QuestionCard.tsx  ReadingCardSwiper.tsx  RepairChallengeMode.tsx  RewardPopup.tsx  SmartFactoryIllustration.tsx
src/data/: cncMachiningQuestions.ts  electricalControlQuestions.ts  encyclopedia.ts  engineeringDrawingImages.ts  engineeringDrawingQuestions.ts  intelligentLineQuestions.ts  levels.ts  manufacturingProcessQuestions.ts  mechanicalBasicsQuestions.ts  modules.ts  questions.ts  readingCards.ts  sensorDetectionQuestions.ts  toleranceDetectionQuestions.ts  userProgress.ts
src/pages/: EncyclopediaPage.tsx  FunctionPage.tsx  HomePage.tsx  ModeLandingPage.tsx  ModulePage.tsx  ProfilePage.tsx  QuestionBankPage.tsx  QuizPage.tsx  WrongBookPage.tsx
src/styles/: index.css
src/utils/: engineeringDrawingRandomizer.ts  learningRecords.ts  localData.ts  progress.ts  questionPools.ts  quiz.ts  storage.ts  testEngineeringDrawingRandomizer.ts
