[package]
name = "gongzao-planet"
version = "0.2.0"
description = "工造星球桌面版"
authors = ["Gongzao Planet"]
edition = "2021"

[lib]
name = "gongzao_planet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
